# install-geode-on-linux

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: build.yml
src/: GeodeInstaller.cpp  SteamGameFinder.cpp  main.cpp
src/include/: GeodeInstaller.hpp  SteamGameFinder.hpp
